k8s/mario.yaml
apiVersion: v1
kind: Service
metadata:
  name: mario
spec:
  selector:
    app: mario
  type: NodePort
  ports:
    - port: 8082
      protocol: TCP
      targetPort: 8082
      nodePort: 30002
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mario
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mario
  template:
    metadata:
      labels:
        app: mario
    spec:
      containers:
        - name: mario
          image: minercreepmc/mario:v1.1
          ports:
            - containerPort: 8082
