k8s/simple-auth.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-auth
spec:
  selector:
    app: simple-auth
  ports:
    - port: 8081
      targetPort: 8081
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-auth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: simple-auth
  template:
    metadata:
      labels:
        app: simple-auth
    spec:
      containers:
        - name: simple-auth
          image: minercreepmc/simple-auth:v1.3
          ports:
            - containerPort: 8081
