k8s/virtual-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: simple-virtual-service
spec:
  hosts:
    - "*"
  gateways:
    - simple-gateway
  http:
    - match:
        - uri:
            prefix: "/home"
      rewrite:
        uri: "/"
      route:
        - destination:
            host: hello-world
            port:
              number: 8080

    - match:
        - uri:
            prefix: "/mario"
      rewrite:
        uri: "/"
      route:
        - destination:
            host: mario
            port:
              number: 8082
