k8s/auth-policy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: simple-auth
spec:
  selector:
    matchLabels:
      app: hello-world # Apply this to hello-world app
  action: CUSTOM
  provider:
    name: simple-auth
  rules:
    - to:
        - operation:
            paths: ["/"]
